--- a/src/scss/landing_page/_header.scss
+++ b/src/scss/landing_page/_header.scss
@@ -5,6 +5,7 @@
   align-items: center;
   height: 100px;
   width: 100%;
+  z-index: 2;
 
 
   &__logo {
